# vehicle-keypoints

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  README.ru.md  coverage.json  index.html  mkdocs.yml  model_card.md.j2  objects.inv  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
architecture/: index.html
configs/data/: synth_phase0.yaml
configs/experiment/: phase0_synth_then_real.yaml
configs/pose3d/: citysample_vehCar_vehicle13.json
configs/train/: phase0_real_ft.yaml  phase0_synth.yaml
data/sample/: annotations.json
data/sample/labels/: car_butler1__16_04881.txt  car_craig1__12_35273.txt  car_craig1__14_3371.txt  car_fifth1__19_02721.txt  car_fifth2__2_00921.txt  car_fifth2__6_00361.txt
docs/: api.md  architecture.md  index.md  model_card.md.j2  serving.md  training.md
docs/phase0/: ablation_report_v6.md  kill_switch_report.md  kill_switch_report_v2.md  kill_switch_report_v3.md  kill_switch_report_v4.md  kill_switch_report_v5.md  synthetic-pretraining.md
notebooks/: 01_eda.ipynb  02_demo.ipynb
phase0/ablation_report_v6/: index.html
phase0/kill_switch_report/: index.html
phase0/kill_switch_report_v2/: index.html
phase0/kill_switch_report_v3/: index.html
phase0/kill_switch_report_v4/: index.html
phase0/kill_switch_report_v5/: index.html
phase0/synthetic-pretraining/: index.html
reports/: metrics.json  metrics_baseline.json  metrics_summary.json  phase0_control_metrics.json  phase0_main_metrics.json  phase0_synth_metrics.json
scripts/: build_sample_data.py  calibrate_pose3d_frame.py  direct_train_yolo.py  eval_pose3d.py  finalize_v010.py  phase0_resume.py  phase0_train.py  phase0_train_v2.py  phase0_train_v3.py  phase0_train_v4.py  phase0_train_v5.py  phase0_train_v6.py  publish_synth_model_hf.py  publish_to_hf.py  render_skeleton_diagram.py  retrain_baseline_flipfix.py  synth_24pt_experiment.py  synth_coco_to_yolo.py  train_all.py
scripts/tools/: pick_keypoints.html
search/: search_index.json
serving/: index.html
src/vehicle_keypoints/: __main__.py
src/vehicle_keypoints/data/: coco_dataset.py  datamodule.py  prepare.py  synth_loader.py
src/vehicle_keypoints/evaluation/: evaluate.py
src/vehicle_keypoints/inference/: overlay.py  predict.py
src/vehicle_keypoints/models/: __init__.py  factory.py  lightning_module.py  vitpose.py
src/vehicle_keypoints/pose3d/: __init__.py  apollo.py  eval_runner.py  frame_align.py  lift.py  metrics.py  model.py  overlay3d.py
src/vehicle_keypoints/scripts_lib/: convert_carfusion.py
src/vehicle_keypoints/serving/: dependencies.py
src/vehicle_keypoints/training/: train.py  train_vitpose.py
tests/: test_convert_carfusion.py  test_data.py  test_inference.py  test_model.py  test_phase0_oversample.py  test_pose3d_apollo.py  test_pose3d_eval_runner.py  test_pose3d_frame_align.py  test_pose3d_lift.py  test_pose3d_metrics.py  test_pose3d_model.py  test_pose3d_overlay3d.py  test_synth_loader.py  test_training.py
tests/fixtures/apollo/camera/: 5.cam
tests/fixtures/apollo/car_poses/: frame_Camera_5.json
training/: index.html
